# ingest-validation-tools

./: .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODEOWNERS  HOWTO-describe-directories.md  README-cleanup_whitespace.py.md  README-generate_dataset_docs.py.md  README-generate_docs.py.md  README-generate_field_enum_csv.py.md  README-generate_other_docs.py.md  README-generate_sample_docs.py.md  README-validate-submission-help.md  README-validate_sample.py.md  README-validate_samples.py.md  README-validate_submission.py.md  README.md  doctests.py  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test-aligned-assay-types.py  test-aligned-assay-types.sh  test-cleanup.sh  test-cli-docs.sh  test-cli.py  test-dataset-examples.sh  test-dataset-generate.sh  test-doctests.sh  test-examples.sh  test-fixtures.py  test-generate-docs.sh  test-generate.sh  test-other-generate.sh  test-sample-examples.sh  test-sample-generate.sh  (+5 more)
assay-descriptions/: af.md  atacseq.md  codex.md  imc.md  lcms.md  maldi-ims.md  mxif.md  rnaseq.md  seqfish.md  stained.md  wgs.md
cleanup-examples/: .gitignore  ascii.tsv  iso-8859-1.tsv  latin-1.tsv  utf-8.clean.expected.tsv  utf-8.tsv
docs/: README.md  _config.yml  current.md  deprecated.md  field-assays.yaml  field-descriptions.yaml  field-entities.yaml  field-schemas.xlsx  field-schemas.yam  field-schemas.yaml  field-types.yaml  grid.xlsx  index.md
examples/: README.md
globus-cache/: README.md
script-docs/: README-cleanup_whitespace.py.md  README-expand_tsv.py.md  (+14 more)
(+1791 files in other folders)
